Added API ID data to Handlebar test

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -6,3 +6,7 @@
   <li class="midlaner">Kassadin</li>
   <li class="toplaner">Jarvan IV</li>
 </ul>
+
+    {{#each crimes}}
+        {{this.id}}
+    {{/each}}
